--- a/rustlisp-wasm/Cargo.toml
+++ b/rustlisp-wasm/Cargo.toml
@@ -8,5 +8,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3.83", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window", "MouseEvent", "HtmlTextAreaElement", "HtmlObjectElement", "CssStyleDeclaration"] }
+web-sys = { version = "0.3.83", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window", "MouseEvent", "HtmlTextAreaElement", "HtmlObjectElement", "CssStyleDeclaration", "HtmlSelectElement", "HtmlOptionElement", "HtmlOptionsCollection"] }
 rustlisp = { path = "../rustlisp"}
