Add WASM fibonacci memo example

--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -22,6 +22,7 @@ jobs:
           mkdir artifacts
           cp -r pkg artifacts/
           cp index.html artifacts/
+          cp favicon.svg artifacts/
       - name: Upload artifacts
         uses: actions/upload-pages-artifact@v4
         with:
